--- a/Welcome_To_Colab.ipynb
+++ b/Welcome_To_Colab.ipynb
@@ -21,11 +21,11 @@
         "print(\"Sorted Array:\", sorted_array)"
       ],
       "metadata": {
-        "id": "XC3zsueyEDIk",
-        "outputId": "77f0c13f-7387-491b-aac7-256514162ec0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XC3zsueyEDIk",
+        "outputId": "77f0c13f-7387-491b-aac7-256514162ec0"
       },
       "execution_count": 22,
       "outputs": [
@@ -65,11 +65,11 @@
         "print(\"DataFrame saved to 'output.csv'\")"
       ],
       "metadata": {
-        "id": "wwXXazNVE9YJ",
-        "outputId": "d3f91c90-e798-47fa-bb89-2f208366b510",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wwXXazNVE9YJ",
+        "outputId": "d3f91c90-e798-47fa-bb89-2f208366b510"
       },
       "execution_count": 23,
       "outputs": [
@@ -152,11 +152,11 @@
         "print(f\"Total Cost: {cost}\")"
       ],
       "metadata": {
-        "id": "895Rs7-sGS1H",
-        "outputId": "21429f3a-6aff-45aa-eb10-0a805d5ffd3e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "895Rs7-sGS1H",
+        "outputId": "21429f3a-6aff-45aa-eb10-0a805d5ffd3e"
       },
       "execution_count": 24,
       "outputs": [
@@ -220,11 +220,11 @@
         "print(f\"Total Cost: {cost}\")"
       ],
       "metadata": {
-        "id": "VXKPg08OGe_x",
-        "outputId": "cbaf13ab-9575-415c-96cb-6e76238502f1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "VXKPg08OGe_x",
+        "outputId": "cbaf13ab-9575-415c-96cb-6e76238502f1"
       },
       "execution_count": 25,
       "outputs": [
@@ -243,7 +243,7 @@
     {
       "cell_type": "code",
       "source": [
-        "CODE-5\n",
+        "#CODE-5\n",
         "def minimax(depth, nodeIndex, maximizingPlayer, values, alpha, beta):\n",
         "    if depth == 3:\n",
         "        return values[nodeIndex]\n",
@@ -271,13 +271,13 @@
         "print(\"The optimal value is:\", optimal_value)"
       ],
       "metadata": {
-        "id": "c0fLtFoTGkq4",
-        "outputId": "6a344b2f-f9eb-4225-f8ae-794e7a81ddc5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "c0fLtFoTGkq4",
+        "outputId": "af44d3f8-fc33-4b99-a6e0-e8a3011a1ac7"
       },
-      "execution_count": 26,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -328,11 +328,11 @@
         "    print(f\"The optimal value is: {result}\")"
       ],
       "metadata": {
-        "id": "7EVZZ_m7Go7D",
-        "outputId": "e12a207e-fce5-43bc-83f7-9cf3e5b2b886",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7EVZZ_m7Go7D",
+        "outputId": "e12a207e-fce5-43bc-83f7-9cf3e5b2b886"
       },
       "execution_count": 27,
       "outputs": [
@@ -376,11 +376,11 @@
         "print(solution)"
       ],
       "metadata": {
-        "id": "nAVfFLlGG354",
-        "outputId": "d4a11dc4-c927-4fab-c853-26c13a6b0a7b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "nAVfFLlGG354",
+        "outputId": "d4a11dc4-c927-4fab-c853-26c13a6b0a7b"
       },
       "execution_count": 28,
       "outputs": [
@@ -397,6 +397,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#CODE-8\n",
         "facts = {\n",
         "    'parent': [\n",
         "        ('john', 'mary'), ('john', 'david'),\n",
@@ -433,11 +434,11 @@
         "print(\"sibling(mary,mary):\", query('sibling', 'mary', 'mary'))\n"
       ],
       "metadata": {
-        "id": "rAPy8m8FHBhA",
-        "outputId": "a4986049-ed2f-42ce-8d8a-f7edda76ebc7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rAPy8m8FHBhA",
+        "outputId": "a4986049-ed2f-42ce-8d8a-f7edda76ebc7"
       },
       "execution_count": 29,
       "outputs": [
@@ -453,15 +454,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "HnplgHB7HEon"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ],
   "metadata": {
