--- a/Welcome_To_Colab.ipynb
+++ b/Welcome_To_Colab.ipynb
@@ -13,7 +13,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#CODE-1\n",
+        "#EXPIREMENT-1\n",
         "import numpy as np\n",
         "array = np.array([14, 5, 54, 18, 7, 90, 6])\n",
         "sorted_array = np.sort(array)\n",
@@ -42,7 +42,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#CODE-2\n",
+        "#EXPERIMENT-2\n",
         "import pandas as pd\n",
         "data = {\n",
         "    'Name': ['Priya', 'Pinky', 'Nancy', 'Mintu'],\n",
@@ -119,7 +119,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#CODE-3\n",
+        "#EXPERIMENT-3\n",
         "import heapq\n",
         "def uniform_cost_search(graph, start, goal):\n",
         "    priority_queue = [(0, start, [])]\n",
@@ -173,7 +173,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#CODE-4\n",
+        "#EXPERIMENT-4\n",
         "import heapq\n",
         "def a_star_search(graph, start, goal, heuristic):\n",
         "    open_list = []\n",
@@ -243,7 +243,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#CODE-5\n",
+        "#EXPERIMENT-5\n",
         "def minimax(depth, nodeIndex, maximizingPlayer, values, alpha, beta):\n",
         "    if depth == 3:\n",
         "        return values[nodeIndex]\n",
@@ -291,7 +291,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#CODE-6\n",
+        "#EXPERIMENT-6\n",
         "class GameTree:\n",
         "    def __init__(self):\n",
         "        self.tree = {\n",
@@ -348,7 +348,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#CODE-7\n",
+        "#EXPERIMENT-7\n",
         "VARIABLES=['csc','maths','phy','che','tam','eng','bio']\n",
         "DOMAIN=['Monday','Tuesday','Wednesday']\n",
         "def is_consistent(var,value,assignment):\n",
@@ -397,7 +397,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#CODE-8\n",
+        "#EXPERIMENT-8\n",
         "facts = {\n",
         "    'parent': [\n",
         "        ('john', 'mary'), ('john', 'david'),\n",
