--- a/Welcome_To_Colab.ipynb
+++ b/Welcome_To_Colab.ipynb
@@ -13,28 +13,28 @@
     {
       "cell_type": "code",
       "source": [
-        "#EXPIREMENT-1\n",
+        "#code 1\n",
         "import numpy as np\n",
-        "array = np.array([14, 5, 54, 18, 7, 90, 6])\n",
-        "sorted_array = np.sort(array)\n",
-        "print(\"Original Array:\", array)\n",
-        "print(\"Sorted Array:\", sorted_array)"
+        "arr=np.array([12,3,55,6,14,1])\n",
+        "sort_arr=np.sort(arr)\n",
+        "print(\"original array:\",arr)\n",
+        "print(\"sorted array:\",sort_arr)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "XC3zsueyEDIk",
-        "outputId": "77f0c13f-7387-491b-aac7-256514162ec0"
+        "id": "vwjVIgwu4N4Z",
+        "outputId": "54b1ef13-edbc-436b-ec64-4ba7c3cd58b4"
       },
-      "execution_count": 22,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Original Array: [14  5 54 18  7 90  6]\n",
-            "Sorted Array: [ 5  6  7 14 18 54 90]\n"
+            "original array: [12  3 55  6 14  1]\n",
+            "sorted array: [ 1  3  6 12 14 55]\n"
           ]
         }
       ]
@@ -42,76 +42,51 @@
     {
       "cell_type": "code",
       "source": [
-        "#EXPERIMENT-2\n",
+        "#code 2\n",
         "import pandas as pd\n",
         "data = {\n",
-        "    'Name': ['Priya', 'Pinky', 'Nancy', 'Mintu'],\n",
-        "    'Age': [20, 30, 35, 40],\n",
-        "    'City': ['India', 'Afirca', 'Buton', 'Brazil']\n",
+        "    'Name' : ['priya','pinky','mintu','nancy'],\n",
+        "    'Age' : [22,24,27,29],\n",
+        "    'Department' : ['HR','IT','Finance','Marketing'],\n",
+        "    'Salary': [5000,6000,7000,8000]\n",
         "}\n",
-        "df = pd.DataFrame(data)\n",
-        "print(\"DataFrame:\")\n",
+        "df=pd.DataFrame(data)\n",
         "print(df)\n",
-        "print(\"\\nSummary Statistics:\")\n",
-        "print(df.describe(include='all'))\n",
-        "print(\"\\nFilter rows where Age > 30:\")\n",
-        "filtered_df = df[df['Age'] > 30]\n",
-        "print(filtered_df)\n",
-        "print(\"\\nAdd a new column (Salary):\")\n",
-        "df['Salary'] = [70000, 80000, 90000, 100000]\n",
-        "print(df)\n",
-        "print(\"\\nSave DataFrame to a CSV file:\")\n",
-        "df.to_csv('output.csv', index=False)\n",
-        "print(\"DataFrame saved to 'output.csv'\")"
+        "print(df.describe())\n",
+        "print(df['Name'])"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "wwXXazNVE9YJ",
-        "outputId": "d3f91c90-e798-47fa-bb89-2f208366b510"
+        "id": "WyOubQHU5q-x",
+        "outputId": "51587cf8-a2d6-4cfe-ffbd-e38737022d67"
       },
-      "execution_count": 23,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "DataFrame:\n",
-            "    Name  Age    City\n",
-            "0  Priya   20   India\n",
-            "1  Pinky   30  Afirca\n",
-            "2  Nancy   35   Buton\n",
-            "3  Mintu   40  Brazil\n",
-            "\n",
-            "Summary Statistics:\n",
-            "         Name        Age   City\n",
-            "count       4   4.000000      4\n",
-            "unique      4        NaN      4\n",
-            "top     Priya        NaN  India\n",
-            "freq        1        NaN      1\n",
-            "mean      NaN  31.250000    NaN\n",
-            "std       NaN   8.539126    NaN\n",
-            "min       NaN  20.000000    NaN\n",
-            "25%       NaN  27.500000    NaN\n",
-            "50%       NaN  32.500000    NaN\n",
-            "75%       NaN  36.250000    NaN\n",
-            "max       NaN  40.000000    NaN\n",
-            "\n",
-            "Filter rows where Age > 30:\n",
-            "    Name  Age    City\n",
-            "2  Nancy   35   Buton\n",
-            "3  Mintu   40  Brazil\n",
-            "\n",
-            "Add a new column (Salary):\n",
-            "    Name  Age    City  Salary\n",
-            "0  Priya   20   India   70000\n",
-            "1  Pinky   30  Afirca   80000\n",
-            "2  Nancy   35   Buton   90000\n",
-            "3  Mintu   40  Brazil  100000\n",
-            "\n",
-            "Save DataFrame to a CSV file:\n",
-            "DataFrame saved to 'output.csv'\n"
+            "    Name  Age Department  Salary\n",
+            "0  priya   22         HR    5000\n",
+            "1  pinky   24         IT    6000\n",
+            "2  mintu   27    Finance    7000\n",
+            "3  nancy   29  Marketing    8000\n",
+            "             Age       Salary\n",
+            "count   4.000000     4.000000\n",
+            "mean   25.500000  6500.000000\n",
+            "std     3.109126  1290.994449\n",
+            "min    22.000000  5000.000000\n",
+            "25%    23.500000  5750.000000\n",
+            "50%    25.500000  6500.000000\n",
+            "75%    27.500000  7250.000000\n",
+            "max    29.000000  8000.000000\n",
+            "0    priya\n",
+            "1    pinky\n",
+            "2    mintu\n",
+            "3    nancy\n",
+            "Name: Name, dtype: object\n"
           ]
         }
       ]
@@ -119,7 +94,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#EXPERIMENT-3\n",
+        "#code -3 :UCS ALGORITHM\n",
         "import heapq\n",
         "def uniform_cost_search(graph, start, goal):\n",
         "    priority_queue = [(0, start, [])]\n",
@@ -155,10 +130,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "895Rs7-sGS1H",
-        "outputId": "21429f3a-6aff-45aa-eb10-0a805d5ffd3e"
+        "id": "433VWqoAXq9D",
+        "outputId": "7faa8216-68f1-4aee-ae8f-8036c42652fd"
       },
-      "execution_count": 24,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,7 +148,8 @@
     {
       "cell_type": "code",
       "source": [
-        "#EXPERIMENT-4\n",
+        "#code - 4 : A* ALGORITHM\n",
+        "\n",
         "import heapq\n",
         "def a_star_search(graph, start, goal, heuristic):\n",
         "    open_list = []\n",
@@ -223,10 +199,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "VXKPg08OGe_x",
-        "outputId": "cbaf13ab-9575-415c-96cb-6e76238502f1"
+        "id": "mKVY25B1bQa4",
+        "outputId": "e99e505a-3b8b-44d8-ddda-335f1fbd3b40"
       },
-      "execution_count": 25,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -243,22 +219,69 @@
     {
       "cell_type": "code",
       "source": [
-        "#EXPERIMENT-5\n",
-        "def minimax(depth, nodeIndex, maximizingPlayer, values, alpha, beta):\n",
+        "#code - 5: HILL CLIMBING ALGORITHM\n",
+        "\n",
+        "import random\n",
+        "def objective_fun(x):\n",
+        "    return -x**2 + 4*x\n",
+        "def hill_climb(start, step_size = 0.1, max_iteration=100):\n",
+        "    current_x = start\n",
+        "    current_value = objective_fun(current_x)\n",
+        "    for i in range(max_iteration):\n",
+        "        neighbors = [current_x + step_size, current_x - step_size]\n",
+        "        neighbor_values = [objective_fun(neighbor) for neighbor in neighbors]\n",
+        "        best_value = max(neighbor_values)\n",
+        "        best_neighbor = neighbors[neighbor_values.index(best_value)]\n",
+        "        if best_value > current_value:\n",
+        "            current_x = best_neighbor\n",
+        "            current_value = best_value\n",
+        "        else:\n",
+        "            break\n",
+        "    return current_x, current_value\n",
+        "start = random.uniform(-10, 10)\n",
+        "result = hill_climb(start)\n",
+        "print(f\"Best solution: x = {result[0]}, value = {result[1]}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "glpVLVIGgn5J",
+        "outputId": "e5486e36-bee1-470d-d06f-9f60b350f34e"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Best solution: x = 2.0180665947163305, value = 3.999673598155356\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#code -6 : ALPHA-BETA PrUNING\n",
+        "MAX, MIN = 1000, -1000\n",
+        "def minimax(depth,nodeIndex,maximizingPlayer,values,alpha,beta):\n",
         "    if depth == 3:\n",
         "        return values[nodeIndex]\n",
+        "\n",
         "    if maximizingPlayer:\n",
-        "        best = float('-inf')\n",
-        "        for i in range(2):\n",
-        "            val = minimax(depth + 1, nodeIndex * 2 + i, False, values, alpha, beta)\n",
-        "            best = max(best, val)\n",
+        "        best = MIN\n",
+        "        for i in range(0, 2):\n",
+        "            val = minimax(depth + 1,nodeIndex * 2 + i, False, values, alpha, beta)\n",
+        "            best = max(best,val)\n",
         "            alpha = max(alpha, best)\n",
         "            if beta <= alpha:\n",
         "                break\n",
         "        return best\n",
+        "\n",
         "    else:\n",
-        "        best = float('inf')\n",
-        "        for i in range(2):\n",
+        "        best = MAX\n",
+        "        for i in range(0, 2):\n",
         "            val = minimax(depth + 1, nodeIndex * 2 + i, True, values, alpha, beta)\n",
         "            best = min(best, val)\n",
         "            beta = min(beta, best)\n",
@@ -266,200 +289,41 @@
         "                break\n",
         "        return best\n",
         "\n",
-        "values = [1, 2, 5, 7, 0, 1, 6, 4]\n",
-        "optimal_value = minimax(0, 0, True, values, float('-inf'), float('inf'))\n",
-        "print(\"The optimal value is:\", optimal_value)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "c0fLtFoTGkq4",
-        "outputId": "af44d3f8-fc33-4b99-a6e0-e8a3011a1ac7"
-      },
-      "execution_count": 30,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "The optimal value is: 2\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#EXPERIMENT-6\n",
-        "class GameTree:\n",
-        "    def __init__(self):\n",
-        "        self.tree = {\n",
-        "            'A': ['B', 'C'],\n",
-        "            'B': ['D', 'E'],\n",
-        "            'C': ['F', 'G'],\n",
-        "            'D': [3, 5],\n",
-        "            'E': [6, 1],\n",
-        "            'F': [2, 4],\n",
-        "            'G': [5, 3]\n",
-        "        }\n",
-        "def alpha_beta(node, depth, alpha, beta, maximizing_player, game_tree):\n",
-        "    if isinstance(game_tree.tree[node], list) and all(isinstance(x, int) for x in game_tree.tree[node]):\n",
-        "        return game_tree.tree[node][0] if depth % 2 == 0 else game_tree.tree[node][1]\n",
-        "    if maximizing_player:\n",
-        "        value = float('-inf')\n",
-        "        for child in game_tree.tree[node]:\n",
-        "            value = max(value, alpha_beta(child, depth + 1, alpha, beta, False, game_tree))\n",
-        "            alpha = max(alpha, value)\n",
-        "            if alpha >= beta:\n",
-        "                break\n",
-        "        return value\n",
-        "    else:\n",
-        "        value = float('inf')\n",
-        "        for child in game_tree.tree[node]:\n",
-        "            value = min(value, alpha_beta(child, depth + 1, alpha, beta, True, game_tree))\n",
-        "            beta = min(beta, value)\n",
-        "            if alpha >= beta:\n",
-        "                break\n",
-        "        return value\n",
         "if __name__ == \"__main__\":\n",
-        "    game = GameTree()\n",
-        "    result = alpha_beta('A', 0, float('-inf'), float('inf'), True, game)\n",
-        "    print(f\"The optimal value is: {result}\")"
+        "    values = [3, 5, 6, 9, 1, 2, 0, -1]\n",
+        "print(\"The optimal value is :\",minimax(0,0,True,values,MIN,MAX))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "7EVZZ_m7Go7D",
-        "outputId": "e12a207e-fce5-43bc-83f7-9cf3e5b2b886"
+        "id": "rARUMjTXhPG-",
+        "outputId": "6989bc85-91e9-4916-c980-079300c90ed9"
       },
-      "execution_count": 27,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The optimal value is: 3\n"
+            "The optimal value is : 5\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#EXPERIMENT-7\n",
-        "VARIABLES=['csc','maths','phy','che','tam','eng','bio']\n",
-        "DOMAIN=['Monday','Tuesday','Wednesday']\n",
-        "def is_consistent(var,value,assignment):\n",
-        "    return True\n",
-        "def backtrack(assignment):\n",
-        "    if len(assignment)==len(VARIABLES):\n",
-        "        assigned_days=set(assignment.values())\n",
-        "        if all(day in assigned_days for day in DOMAIN):\n",
-        "            return assignment\n",
-        "        else:\n",
-        "            return None\n",
-        "    for var in VARIABLES:\n",
-        "        if var not in assignment:\n",
-        "            for value in DOMAIN:\n",
-        "                if is_consistent(var,value,assignment):\n",
-        "                    assignment[var]=value\n",
-        "                    result=backtrack(assignment)\n",
-        "                    if result:\n",
-        "                        return result\n",
-        "                    del assignment[var]\n",
-        "            return None\n",
-        "    return None\n",
-        "solution=backtrack({})\n",
-        "print(\"RESULT:\")\n",
-        "print(solution)"
-      ],
+      "source": [],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "nAVfFLlGG354",
-        "outputId": "d4a11dc4-c927-4fab-c853-26c13a6b0a7b"
+        "id": "LdObFSTriD07"
       },
-      "execution_count": 28,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "RESULT:\n",
-            "{'csc': 'Monday', 'maths': 'Monday', 'phy': 'Monday', 'che': 'Monday', 'tam': 'Monday', 'eng': 'Tuesday', 'bio': 'Wednesday'}\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#EXPERIMENT-8\n",
-        "facts = {\n",
-        "    'parent': [\n",
-        "        ('john', 'mary'), ('john', 'david'),\n",
-        "        ('susan', 'mary'), ('susan', 'david'),\n",
-        "        ('mary', 'linda'), ('mary', 'steve')\n",
-        "    ],\n",
-        "    'male': ['john', 'david', 'steve'],\n",
-        "    'female': ['susan', 'mary', 'linda']\n",
-        "}\n",
-        "\n",
-        "def query(predicate, *args):\n",
-        "    if predicate == 'father':\n",
-        "        return (args[0], args[1]) in facts['parent'] and args[0] in facts['male']\n",
-        "    elif predicate == 'mother':\n",
-        "        return (args[0], args[1]) in facts['parent'] and args[0] in facts['female']\n",
-        "    elif predicate == 'grandparent':\n",
-        "        for x, y in facts['parent']:\n",
-        "            if x == args[0]:\n",
-        "                for a, b in facts['parent']:\n",
-        "                    if a == y and b == args[1]:\n",
-        "                        return True\n",
-        "        return False\n",
-        "    elif predicate == 'sibling':\n",
-        "        p1 = set(p for p, c in facts['parent'] if c == args[0])\n",
-        "        p2 = set(p for p, c in facts['parent'] if c == args[1])\n",
-        "        return args[0] != args[1] and len(p1 & p2) > 0\n",
-        "    else:\n",
-        "        return False\n",
-        "\n",
-        "print(\"father(john,mary):\", query('father', 'john', 'mary'))\n",
-        "print(\"mother(susan,david):\", query('mother', 'susan', 'david'))\n",
-        "print(\"grandparent(john,linda):\", query('grandparent', 'john', 'linda'))\n",
-        "print(\"sibling(mary,david):\", query('sibling', 'mary', 'david'))\n",
-        "print(\"sibling(mary,mary):\", query('sibling', 'mary', 'mary'))\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "rAPy8m8FHBhA",
-        "outputId": "a4986049-ed2f-42ce-8d8a-f7edda76ebc7"
-      },
-      "execution_count": 29,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "father(john,mary): True\n",
-            "mother(susan,david): True\n",
-            "grandparent(john,linda): True\n",
-            "sibling(mary,david): True\n",
-            "sibling(mary,mary): False\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "name": "Welcome To Colab",
-      "toc_visible": true,
       "provenance": [],
       "include_colab_link": true
     },
